Add testing on JDK 16 and 17